1.5.0
-----
1. When LMS is set to list a multi-CD album as 1 album, then visually split up
   the CDs' track listings, and allow to play individual CDs.
2. Add a play icon over cover-art of current track.

1.4.4
-----
1. Fix colour of active repeat/shuffle/dstm buttons in now-playing.
2. Update French translation - thanks to Franck Berry.
3. Bolder header titles.

1.4.3
-----
 1. Fix colours for grid select buttons.
 2. Fix emblems on large lists when using dark themes.
 3. Revert to previous splitter library, as new one caused views to be
    recreated when switching desktop/mobile.
 4. Modify splitter code to work better on touch devices.
 5. Include artist image toggle in cache key.
 6. Fix clipping of 'Fixed Volume' text.
 7. Show 'Fixed Volume' text on mini-player.
 8. Better grid size calculation.
 9. Set min widths for browse and queue views for desktop layout.
10. If desktop queue view is too narrow, then move some actions into main
    menu - as happens for mobile layout.
11. Fix updating selection when use checkboxes.
12. Increase mini-player height to prevent clipping of cover.

1.4.2
-----
 1. Fix silly typo that broke some actions.
 2. Better Qobuz emblem.
 3. Better colours for emblems.
 4. When parsing SlimBrowse key:value pairs check that value is not empty.
 5. Fix missing covers when browse albums via More -> Artist:NAME
 6. Allow activation of Dynamic Playlists listed from More -> Artist:NAME ->
    More -> Dynamic Playlists
 7. Fix showing search results when there are 10, or less, results for a
    category.
 8. Append "?r=MaterialVersion" on classic skin mods changes.
 9. Fix long-press on 'Show extra settings' not passing player ID/MAC.
10. Strip off .html when doing redirects.
11. Don't show NaN% as volume in desktop layout if no players.
12. Better volume slider for powered off players using dark/light coloured
    desktop layout.

1.4.1
-----
 1. Slightly reduce size of 'Scroll queue to current track' icon.