@@ -3,6 +3,7 @@
 1. When LMS is set to list a multi-CD album as 1 album, then visually split up
    the CDs' track listings, and allow to play individual CDs.
 2. Add a play icon over cover-art of current track.
+3. Add 'More' action to subtoolbar for artist and albums.
 
 1.4.4
 -----
